=================
Version 1.2.5.0
=================

Changes:
- Updated tutorial to account for EOS scripts.

Fixed Bugs:
- Fixed initially opened script contents not showing in the Script Editor
  on application launch.
- Fixed the file browser opening outside the Project folder when trying to
  create a new script.
- Fixed desktop styles missing some updates that are present in Android
  version.

=================
Version 1.2.4.0
=================

Changes:
- Removed advanced settings page on Android, because it was empty anyways.
- Inverted Changelog order so players can see the new changes without scrolling
  down for an hour.

Fixed Bugs:
- Fixed crash on Android when trying to obtain screen size

=================
Version 1.2.3.0
=================

New Features:
- Added a new "Show in Explorer" option to the context menu in the Resource Tree.

Changes:
- EOS script files have a new graphical editor similar to the Milovana editor.
- Project Describtion can be edited in a new richtext editor.
- Added smaller animations to various ui interactions
- Project version warning on card is only shown if project version is larger than
  the current engine version.
- Sorting of Resource View improved. It now sorts items like the Explorer would
  (Folders first, and using natural sort) when sorting for names.
- Removed auto-replay of Audio Resources in the Editor because it felt 
  irritating when working with audio.

=================
Version 1.2.2.0
=================

Fixed Bugs:
- Fixed Tutorials not working.
- Fixed EOS script commands with empty arrays not evaluating correctly.
- Fixed JS import parsing for aliases containing "as".
- Fixed missing images in default style
- Fixed being able to set editor layout to "none" (default value) in settings.
- Cosmetic fixes in html help.

=================
Version 1.2.1.0
=================

New Features:
- JS-Style import statements for Modules implemented without defaultMember suport 
  for now.